# uts

./: .gitignore  AGENTS.md  LICENCE.md  README.md  TODO.md  __init__.py  build.py
add-ons/: NOTE.md
arch/at/i386/io/: asy.c  fd.c  hd.c
arch/at/i386/io/kd/: evga.c  kdstr.c  kdv.c  vtables.c
arch/at/i386/io/kdvm/: kdvm.c
arch/at/i386/io/mouse/: m320.c  mse.h  mse_subr.c
arch/at/i386/master.d/kd/: space.c
arch/at/i386/master.d/m320/: mdev  node  sdev
build-specs/i386/: boot-floppy-replacements.json  kernel.yaml
build-specs/i386/kernel/: 00-foundation.yaml  10-config-and-link.yaml  20-platform-and-boot.yaml  30-kernel-targets.yaml
i386/: vuifile
i386/boot/at386/: GDT.s  boot.ld  bstart.s  default.c  disk.c  e820.s  load.c  memcpy.s  memsize.c  pit.s  prot.s  start.s  touchpage.s  util.s
i386/boot/at386/initprog/: at386.s  att.s  compaq.s  initprog.ld  inout.s  misc.c
i386/boot/at386/tool/: tools.mk
i386/boot/bootlib/: bfsfilesys.c  elf.c
i386/boot/sys/: libfm.h
i386/exec/coff/: coff.c
i386/exec/elf/: elf.c
i386/fp/: arith.s  dcode.s  divmul.s  e80387.h  lipsq.s  reg.s  remsc.s  round.s  status.s  store.s  subadd.s  trans.s
i386/fp/tool/: tools.mk
i386/fs/: vncalls.c
i386/fs/nfs/: nfs_vnops.c
i386/fs/proc/: prmachdep.c
i386/fs/rfs/: du.c  rf_cirmgr.c  rf_vnops.c  rfsr_ops.c
i386/fs/s5/: s5vnops.c
i386/fs/specfs/: specvnops.c
i386/fs/ufs/: ufs_inode.c  ufs_vfsops.c  ufs_vnops.c
i386/io/: char.c  ctl87.c  dmacheck.c  emap.c  hrtimers.c  ladd.s  ldterm.c  lshiftl.s  lsub.s  mem.c  nxt.c  ramd.c  sockmod.c  sxt.c  ticlts.c  ticots.c  ticotsord.c  tirdwr.c  ttcompat.c  xt.c
i386/kdb/gdebugger/: dbg.c
i386/kdb/kdb/: db.c  dbintrp.c  dbshow.c  debugger.h
i386/kdb/kdb-util/: db_as.c
i386/master.d/: mtune
i386/master.d/app/: sdev
i386/master.d/arp/: mdev  sdev
i386/master.d/icmp/: mdev  sdev
i386/master.d/ip/: mdev  sdev
i386/master.d/kernel/: space.c
i386/master.d/llcloop/: mdev  sdev
i386/master.d/ptem/: sdev
i386/master.d/rawip/: mdev  sdev
i386/master.d/sockmod/: sdev
i386/master.d/tcp/: mdev  sdev
i386/master.d/ticlts/: sdev
i386/master.d/ticots/: sdev
i386/master.d/ticotsor/: sdev
i386/master.d/timod/: sdev
i386/master.d/tirdwr/: sdev
i386/master.d/udp/: mdev  sdev
i386/ml/: Gensymvals  cswitch.s  intr.s  locore.s  misc.s  oemsup.s  start.s  string.s  syms.s  tables2.c  ttrap.s  uprt.s  v86gptrap.s  weitek.s
i386/net/: if_arp.h
i386/netinet/: if_ether.h  in.c  in.h  in_cksum.c  in_pcb.c  in_switch.c  in_transp.c  ip_icmp.c  ip_input.c  ip_main.c  ip_output.c  ip_var.h  netlib.c  raw_ip.c  raw_ip_cb.c  raw_ip_main.c  route.c  tcp_debug.c  tcp_fsm.h  tcp_input.c  tcp_main.c  tcp_output.c  tcp_state.c  tcp_subr.c  tcp_timer.c  tcp_var.h  tcpip.h  udp_io.c  udp_main.c  udp_state.c  udp_var.h
i386/nfs/: nfs.h
i386/os/: bio.c  clock.c  cmn_err.c  cpuid.c  cstubs.c  exec.c  exit.c  fork.c  fp.c  grow.c  kma.c  local.c  machdep.c  main.c  nmi.c  oem.c  predki.c  random.c  scalls.c  shm.c  startup.c  sysent.c  sysi86.c  thread.c  trap.c  vm_pageout.c  xmmu.c
i386/rpc/: auth.h  rpc_subr.c
i386/sys/: byteorder.h  cpuid.h  errno.h  exec.h  fcntl.h  fp.h  hd.h  immu.h  inline.h  kd.h  kdebugger.h  mkdev.h  mman.h  proc.h  procfs.h  random.h  regset.h  seg.h  signal.h  socket.h  swap.h  syscall.h  systm.h  ticots.h  ticotsord.h  time.h  types.h  user.h  v86.h
i386/vm/: anon.h  kmap.h  seg_kmem.h  seg_u.c  seg_u.h  seg_vn.c  seg_vn.h  seg_vpix.c  vm_anon.c  vm_as.c  vm_hat.c  vm_hat.h  vm_kmap.c  vm_machdep.c  vm_page.c  vm_swap.c  vm_swapfs.c
idtools/: README.md  idbuild  idconfig.c  idmkunix.c  idreboot  idtune  idval.c  meson.build
meson/: empty.c  gen_groups.py  gen_headers.py  gen_ml.py  gen_staging.py  idmkunix.conf.in  kernel-modules.json  meson.build  meson.options  partial_link.py  stage_aggregate.py  stage_fragment.py  stage_pack.py  validate.sh
meson/boot/: meson.build
tools/: __init__.py  ansi_c_rewrite.py  boot_floppy_image.py  boot_rmhdr.py  debug_hybrid_boot.py  floppyfs.py  legacy_as.py  legacy_c_pipeline.py  legacy_ld.py  legacy_setfilter.py  pathing.py  uts_boot_common.py  uts_boot_initprog.py  uts_boot_symvals.py  uts_build_boot.py  uts_build_fp.py  uts_driver_compose.py  uts_fp_symvals.py  uts_idbuild.py  uts_idconfig.py  uts_idmkunix.py  uts_ml_build.py  uts_stage_master_at386.py  uts_symvals.py
tools/boot-media/: label.hybrid
tools/cocci/: assignment_in_if.cocci
tools/floppyfslib/: __init__.py  cli.py  core.py  ops.py  s5.py
