# --------------------------------------------------------------------------
# Boot pipeline: the AT386 bootstrap (fdboot/hdboot -> /etc/.fboot,/etc/.wboot),
# the bootlib it links against, and the initprog programs (at386/att/compaq).
#
# Native port of the old tools/uts_build_boot.py + uts_boot_initprog.py +
# uts_boot_common.py. Those scripts cpp'd, comment-normalized and assembled each
# .s "the way the old makefiles did"; the .s sources are now in modern GNU-as
# syntax (/* */ comments), so every source is just a per-source custom_target:
#   .c  -> cc <flags> -c
#   .s  -> cc -x assembler-with-cpp <flags> -c   (cpp #include + assemble in one)
# Links use the bfd cross ld (kernel_ld) with checked-in linker scripts (boot.ld
# / initprog.ld), replacing legacy_ld.py + the inline mapfile/binimap.ld. The
# section-folding that uts_build_boot.py's apply_boot_sed did now lives in
# boot.ld. bsymvals.{s,h} is the one remaining generated input (struct offsets +
# header #defines that need the C compiler) -> a single custom_target, exactly
# like ml's symvals.s. boot_rmhdr.py (binary ELF-header strip + pad) stays.
# --------------------------------------------------------------------------

boot_root   = i386 / 'boot'
boot_at386  = boot_root / 'at386'
bootlib_dir = boot_root / 'bootlib'
initprog_dir = boot_at386 / 'initprog'

boot_symvals_py = kernel_root / 'tools/uts_boot_symvals.py'
boot_rmhdr_py   = kernel_root / 'tools/boot_rmhdr.py'

# cc string for the symvals helper (single token; cross "c" is one element here).
boot_cc = ' '.join(cc.cmd_array())

# bfd linker for the boot/initprog links: mold cannot do the -dn / script links.
# kernel_ld is already resolved to the bfd cross ld above.
boot_ld = kernel_ld

# (1) bsymvals.s (.set hdp_* offsets) + bsymvals.h (#define table). Generated by
#     the C compiler; util.s #includes bsymvals.s and several .s #include
#     bsymvals.h, so the outdir goes on -I for every boot object below.
bsymvals = custom_target('bsymvals',
  output: ['bsymvals.s', 'bsymvals.h'],
  command: [py, boot_symvals_py,
    '--workspace-root', kernel_root,
    '--output-root', '@OUTDIR@',
    '--cc', boot_cc],
  build_by_default: true,
)
bsymvals_dir = meson.current_build_dir()  # @OUTDIR@ of a top-level target

# Source lists (verbatim from the old scripts).
bootlib_srcs = ['blfile.c', 'filesys.c', 's5filesys.c', 'elf.c', 'bfsfilesys.c']
boot_srcs = [
  'start.s', 'prot.s', 'GDT.s', 'util.s', 'pit.s',
  'boot.c', 'printf.c', 'gets.c', 'load.c', 'disk.c', 'string.c', 'default.c',
  'memcpy.s', 'touchpage.s', 'e820.s', 'physaddr.c', 'memsize.c', 'bstart.s',
]
initprog_progs = {
  'compaq': ['compaq.s'],
  'att'   : ['att.s', 'misc.c', 'inout.s', 'video.c'],
  'at386' : ['at386.s', 'misc.c', 'inout.s'],
}

# Compile flags (from uts_build_boot.py COMMON_CFLAGS/CPP_DEFINES).
boot_cpp_defs = ['-DAT386', '-DWEITEK', '-DWEITEK_EMULATOR']
boot_cflags = [
  '-m32', '-std=gnu89', '-fcommon', '-fno-builtin', '-fno-stack-protector',
  '-fomit-frame-pointer', '-fno-unwind-tables', '-fno-asynchronous-unwind-tables',
  '-fno-pic', '-falign-functions=1', '-falign-jumps=1', '-falign-labels=1',
  '-falign-loops=1', '-mgeneral-regs-only', '-nostdinc', '-nostdlib', '-Os',
]
boot_inc = ['-I' + bsymvals_dir, '-I' + i386]

# Per-source object compile. variant = unique target-name suffix; wini adds -DWINI
# (hard-disk boot variant). Returns the list of built object targets.
#   foreach handled inline because Meson has no user functions.

# fdboot uses the floppy variant, hdboot adds -DWINI.
boot_variants = {'fd': [], 'hd': ['-DWINI']}

boot_objs = {}        # variant -> [objects]  (boot_at386 sources)
bootlib_objs = {}     # variant -> [objects]  (bootlib sources)

foreach variant, extra : boot_variants
  objs = []
  foreach src : boot_srcs
    objname = 'boot_' + variant + '_' + '_'.join(src.split('.'))
    if src.endswith('.s')
      t = custom_target(objname,
        input: boot_at386 / src,
        output: objname + '.o',
        depends: bsymvals,
        command: [cc.cmd_array(), '-x', 'assembler-with-cpp', boot_cflags,
                  boot_cpp_defs, extra, boot_inc, '-c', '@INPUT@', '-o', '@OUTPUT@'],
      )
    else
      t = custom_target(objname,
        input: boot_at386 / src,
        output: objname + '.o',
        command: [cc.cmd_array(), boot_cflags, boot_cpp_defs, extra, boot_inc,
                  '-c', '@INPUT@', '-o', '@OUTPUT@'],
      )
    endif
    objs += t
  endforeach
  boot_objs += {variant: objs}

  lib_objs = []
  foreach src : bootlib_srcs
    objname = 'bootlib_' + variant + '_' + '_'.join(src.split('.'))
    lib_objs += custom_target(objname,
      input: bootlib_dir / src,
      output: objname + '.o',
      command: [cc.cmd_array(), boot_cflags, boot_cpp_defs, extra, boot_inc,
                '-c', '@INPUT@', '-o', '@OUTPUT@'],
    )
  endforeach
  bootlib_objs += {variant: lib_objs}
endforeach

# Link fdboot.elf / hdboot via the bfd ld + boot.ld (-dn: no dynamic).
fdboot_elf = custom_target('fdboot.elf',
  input: boot_objs['fd'] + bootlib_objs['fd'],
  output: 'fdboot.elf',
  command: [boot_ld, '-m', 'elf_i386', '-dn', '-T', boot_at386 / 'boot.ld',
            '-o', '@OUTPUT@', '@INPUT@'],
  build_by_default: true,
)
hdboot_elf = custom_target('hdboot.elf',
  input: boot_objs['hd'] + bootlib_objs['hd'],
  output: 'hdboot.elf',
  command: [boot_ld, '-m', 'elf_i386', '-dn', '-T', boot_at386 / 'boot.ld',
            '-o', '@OUTPUT@', '@INPUT@'],
  build_by_default: true,
)

# Final, stripped hdboot. The output name is the /stand name; the recipe's
# collect step mirrors it to /etc/.wboot. Strip via the cross strip (custom_target
# cannot copy-in-place, so we strip to a fresh output).
strip_prog = find_program('i686-pc-sysv4-mlibc-strip', 'strip', native: false)

hdboot = custom_target('hdboot',
  input: hdboot_elf,
  output: 'hdboot',
  command: [strip_prog, '-o', '@OUTPUT@', '@INPUT@'],
  build_by_default: true,
  install: true,
  install_dir: 'stand',
  install_tag: 'boot',
)

# fdboot: strip, then rmhdr (drop ELF header, keep the PT_LOAD payload, pad to
# 30*512 with 0xF6). The final image ships as /etc/.fboot, so the rmhdr target's
# output IS '.fboot' and installs to /etc directly (no rename needed).
fdboot_stripped = custom_target('fdboot.stripped',
  input: fdboot_elf,
  output: 'fdboot.stripped',
  command: [strip_prog, '-o', '@OUTPUT@', '@INPUT@'],
  build_by_default: true,
)
fboot = custom_target('fboot',
  input: fdboot_stripped,
  output: '.fboot',
  command: [py, boot_rmhdr_py, '--pad-to', '15360', '--pad-byte', '0xF6',
            '@INPUT@', '@OUTPUT@'],
  build_by_default: true,
  install: true,
  install_dir: 'etc',
  install_tag: 'boot',
)

# --------------------------------------------------------------------------
# initprog: at386 / att / compaq. C sources force-include sys/types.h.
# Linked at base 0 with ENTRY(initprog) via initprog.ld. Installed to /stand;
# the recipe's collect step mirrors them into /etc/initprog.
# --------------------------------------------------------------------------
initprog_cpp_defs = ['-D_KERNEL', '-DAT386', '-DWEITEK', '-DWEITEK_EMULATOR']
initprog_cflags = ['-m32', '-std=gnu89', '-fcommon', '-fno-builtin', '-O']
initprog_inc = ['-I' + bsymvals_dir, '-I' + i386]
types_h = i386 / 'sys/types.h'

foreach prog, srcs : initprog_progs
  objs = []
  foreach src : srcs
    objname = 'initprog_' + prog + '_' + '_'.join(src.split('.'))
    if src.endswith('.s')
      objs += custom_target(objname,
        input: initprog_dir / src,
        output: objname + '.o',
        depends: bsymvals,
        command: [cc.cmd_array(), '-x', 'assembler-with-cpp', initprog_cflags,
                  initprog_cpp_defs, initprog_inc, '-c', '@INPUT@', '-o', '@OUTPUT@'],
      )
    else
      objs += custom_target(objname,
        input: initprog_dir / src,
        output: objname + '.o',
        depends: bsymvals,
        command: [cc.cmd_array(), initprog_cflags, '-include', types_h,
                  initprog_cpp_defs, initprog_inc, '-c', '@INPUT@', '-o', '@OUTPUT@'],
      )
    endif
  endforeach
  custom_target('initprog-' + prog,
    input: objs,
    output: prog,
    command: [boot_ld, '-m', 'elf_i386', '-T', initprog_dir / 'initprog.ld',
              '-e', 'initprog', '-o', '@OUTPUT@', '@INPUT@'],
    build_by_default: true,
    install: true,
    install_dir: 'stand',
    install_tag: 'boot',
  )
endforeach

# default.* boot config files (plain data) -> /etc/default. /stand/boot is
# default.at386 under another name; the recipe's collect step makes that copy.
install_data(
  boot_at386 / 'default/default.at386',
  boot_at386 / 'default/default.at386_classic',
  boot_at386 / 'default/default.att',
  boot_at386 / 'default/default.att512',
  boot_at386 / 'default/default.cpq',
  install_dir: 'etc/default',
  install_tag: 'boot',
)
